<resources>
    <string name="app_name">器官云监控</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="send_verification">发送验证码</string>
    <string name="cloud_monitor">云监控</string>
    <string name="message">消息</string>
    <string name="new_build">新建转运</string>
    <string name="link">互联</string>
    <string name="me">我的</string>
    <string name="contact">通讯录</string>
    <string name="history">历史</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="loading">加载中</string>
</resources>
