<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#dfdfdd" />

    <!-- 底部导航 -->

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="53.5dp"
        android:background="#f9f9f9"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_cloud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_cloud"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />
                <!--android:src="@drawable/tab_contact_list"-->

                <TextView
                    android:id="@+id/tv_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_cloud"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/cloud_monitor"
                    android:textColor="#abadbb"
                    android:textSize="12sp" />


            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true">

                <RelativeLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="2dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_message"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:background="#ffffff"
                        android:focusable="false"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_message"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/message"
                        android:textColor="#abadbb"
                        android:textSize="12sp" />

                </RelativeLayout>

                <com.mobileoffice.view.DragPointView
                    android:id="@+id/dpv_message_num"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="19dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@id/ll"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="invisible" />


            </FrameLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_new"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />
                <!--android:src="@drawable/tab_find"-->

                <TextView
                    android:id="@+id/tv_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_new"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/new_build"
                    android:textColor="#abadbb"
                    android:textSize="12sp" />


            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_link"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_link"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />
                <!--android:src="@drawable/tab_find"-->

                <TextView
                    android:id="@+id/tv_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_link"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/link"
                    android:textColor="#abadbb"
                    android:textSize="12sp" />


            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_me"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />
                <!--android:src="@drawable/tab_contact_list"-->

                <TextView
                    android:id="@+id/tv_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_me"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/me"
                    android:textColor="#abadbb"
                    android:textSize="12sp" />


            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>